--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Yellow Pigeon Blog
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://yellowpigeon.github.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://yellowpigeon.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
