--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,10 @@ title: Yellow Pigeon Blog
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 absolute_url: "https://yellowpigeon.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+# twitter_username: jekyllrb
+github_username:  YellowPigeon
+
+show_excerpts: false
 
 # Build settings
 markdown: kramdown
